WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249101
REGRESSION(
257606@main
): WebProcess::didClose override broke GLib ports
https://bugs.webkit.org/show_bug.cgi?id=249101
Summary
REGRESSION(257606@main): WebProcess::didClose override broke GLib ports
Philippe Normand
Reported
2022-12-11 11:23:21 PST
run-gtk-tests /app/webkit/WebKitBuild/Release/bin/TestWebKitAPI/WebKitGTK/TestUIClient hangs forever after running the tests.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-12-11 11:28:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7453
EWS
Comment 2
2022-12-12 02:56:27 PST
Committed
257721@main
(ab0bcd358b50): <
https://commits.webkit.org/257721@main
> Reviewed commits have been landed. Closing PR #7453 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug