REGRESSION(257606@main): WebProcess::didClose override broke GLib ports https://bugs.webkit.org/show_bug.cgi?id=249101

Reviewed by Carlos Garcia Campos.

Chain WebProcess::didClose() to parent class in order to let the AuxiliaryProcess clean-up properly.

* Source/WebKit/Shared/AuxiliaryProcess.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::didClose):

Canonical link: https://commits.webkit.org/257721@main